fix home on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,13 +4,13 @@ section.home {
 	background-size: 100% 100%;
 	background-attachment: fixed;
 	align-items: flex-end;
-	padding-top: 20px;
+	padding-top: 1em;
 	max-width: 100%;
 }
 
 section.home > * {
 	margin: 0;
-	margin-right: 12%;
+	margin-right: 1.3em;
 	text-align: right;
 }
 
@@ -33,26 +33,117 @@ section.home > h3 {
 	font-size: 2em;
 }
 
-@media screen and (max-height: 800px) {
+@media screen and ( max-width: 600px ) {
+	section.home > h1 {
+		font-size: 3em;
+	}
+	section.home > h2 {
+		font-size: 2.4em;
+	}
+	section.home > h3 {
+		font-size: 1.5em;
+	}
+}
+
+@media screen and ( max-height: 800px ) {
 	section.home > h1 {
 		margin-top: 260px;
 	}
 }
 
-@media screen and (max-height: 600px) {
+@media screen and ( max-height: 600px ) {
 	section.home > h1 {
 		margin-top: 200px;
+		font-size: 3em;
+	}
+	section.home > h2 {
+		font-size: 2.4em;
+	}
+	section.home > h3 {
+		font-size: 1.5em;
 	}
 }
 
-@media screen and (max-height: 400px) {
+@media screen and ( max-width: 420px ) {
+	section.home > h1 {
+		font-size: 2em;
+	}
+	section.home > h2 {
+		font-size: 1.6em;
+	}
+	section.home > h3 {
+		font-size: 1em;
+	}
+}
+
+@media screen and ( max-height: 450px ) {
+	section.home > h1 {
+		font-size: 2em;
+	}
+	section.home > h2 {
+		font-size: 1.6em;
+	}
+	section.home > h3 {
+		font-size: 1em;
+	}
+}
+
+@media screen and ( max-width: 300px ) {
+	section.home > h1 {
+		font-size: 1.5em;
+	}
+	section.home > h2 {
+		font-size: 1.2em;
+	}
+	section.home > h3 {
+		font-size: 0.75em;
+	}
+}
+
+@media screen and ( max-height: 400px ) {
 	section.home > h1 {
 		margin-top: 140px;
 	}
 }
 
-@media screen and (max-height: 300px) {
+@media screen and ( max-height: 350px ) {
 	section.home > h1 {
-		margin-top: 80px;
+		margin-top: 110px;
+	}
+}
+
+@media screen and ( max-height: 300px ) {
+	section.home > h1 {
+		font-size: 1.5em;
+	}
+	section.home > h2 {
+		font-size: 1.2em;
+	}
+	section.home > h3 {
+		font-size: 0.75em;
+	}
+}
+
+@media screen and ( max-width: 240px ) {
+	section.home > h1 {
+		font-size: 1em;
+	}
+	section.home > h2 {
+		font-size: 0.8em;
+	}
+	section.home > h3 {
+		font-size: 0.5em;
+	}
+}
+
+@media screen and ( max-width: 215px ) {
+	section.home > h1 {
+		margin-top: 150px;
+	}
+}
+
+@media screen and ( max-width: 188px ) {
+	section.home > h1 {
+		margin-top: 180px;
 	}
 }
